user_guides/prometheus/pod-deployment/f5-hello-world-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: f5-hello-world
  name: f5-hello-world
spec:
  replicas: 4
  selector:
    matchLabels:
      app: f5-hello-world
  template:
    metadata:
      labels:
        app: f5-hello-world
    spec:
      containers:
      - env:
        - name: service_name
          value: f5-hello-world
        image: f5devcentral/f5-hello-world:latest
        imagePullPolicy: Always
        name: f5-hello-world
        ports:
        - containerPort: 8080
          protocol: TCP
