user_guides/prometheus/pod-deployment/hello-world-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # Specify a supported BIG-IP load balancing mode
    # Balance to round-robin
    # health monitoring
    virtual-server.f5.com/http-port: "80"
    ingress.kubernetes.io/allow-http: "true"
    ingress.kubernetes.io/ssl-redirect: "false"
    virtual-server.f5.com/balance: "round-robin"
    virtual-server.f5.com/health: |
        [
          {
            "path": "/",
            "send": "HTTP GET /",
            "interval": 5,
            "timeout": 10
          }
        ]
    virtual-server.f5.com/ip: 10.192.75.108
  name: f5-hello-world
spec:
  rules:
  - host:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: f5-hello-world
            port:
              number: 8080
